# sql-anywhere

./: .dockerignore  .env  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.musl  README-sqlanywhere.md  README.md  dist-workspace.toml
.github/: release-drafter.yml
.github/workflows/: brew-test.yml  c-bindings.yml  extensions-test.yml  golang-bindings.yml  nemesis.yml  publish-crsqlite.yml  publish-server.yml  release-sqlanywhere.yml  rust.yml  server-binaries.yml  server-pr-images.yml  sqlanywhere-server-release.yml  sqlite3.yml
bindings/c/: Cargo.toml  Makefile  build.rs  cbindgen.toml  example.c
bindings/c/include/: sqlanywhere.h
bindings/c/src/: lib.rs  types.rs
bindings/wasm/: Cargo.toml  README.md  example.js
bindings/wasm/src/: lib.rs
bottomless/: Cargo.toml  Makefile  README.md  bottomless.c
bottomless-cli/: Cargo.toml
bottomless-cli/src/: main.rs
bottomless/src/: bottomless_wal.rs  ffi.rs  replicator.rs
bottomless/test/: restore_test.sh  smoke_test.sh
docker-compose/: docker-compose-with-bottomless.yml
docs/: ADMIN_API.md  BUILD-RUN.md  DESIGN.md  DOCKER.md  ROADMAP.md  TECH_DEBT.md  USER_GUIDE.md  VECTOR_SEARCH.md  client_version_metrics.md
scripts/: publish-crates.sh  sqlite-diff  update-sqlite-bundle.sh
sqlanywhere/: Cargo.toml  DEVELOPING.md  README.md
sqlanywhere-ffi/: Cargo.toml  build.rs
sqlanywhere-ffi/bundled/SQLite3MultipleCiphers/: CMakeLists.txt
sqlanywhere-ffi/bundled/SQLite3MultipleCiphers/src/: cipher_config.c  cipher_wxaes256.c  codec_algos.c  codecext.c  extensionfunctions.c  sqlite3mc.c  sqlite3mc_vfs.c
sqlanywhere-ffi/bundled/bindings/: bindgen.rs  session_bindgen.rs
sqlanywhere-ffi/bundled/src/: sqlite3.h
sqlanywhere-ffi/src/: lib.rs
sqlanywhere-hrana/: Cargo.toml
sqlanywhere-replication/: Cargo.toml
sqlanywhere-replication/proto/: replication_log.proto
sqlanywhere-replication/src/: frame.rs  lib.rs  replicator.rs
sqlanywhere-replication/src/injector/: mod.rs  sqlanywhere_injector.rs
sqlanywhere-server/: Cargo.toml  README.md  local-test-envs
sqlanywhere-server/scripts/: gen_jwt_test_assets.py  install-deps.sh  run_prometheus_docker.sh
sqlanywhere-server/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  pager.rs  query_analysis.rs  query_result_builder.rs  stats.rs
sqlanywhere-server/src/auth/: authorized.rs  parsers.rs
sqlanywhere-server/src/connection/: config.rs  connection_core.rs  connection_manager.rs  legacy.rs  mod.rs  program.rs  write_proxy.rs
sqlanywhere-server/src/database/: replica.rs
sqlanywhere-server/src/hrana/: batch.rs  mod.rs  stmt.rs
sqlanywhere-server/src/namespace/: meta_store.rs  name.rs  replication_wal.rs  store.rs
sqlanywhere-server/src/replication/: replicator_client.rs  snapshot.rs  snapshot_store.rs
sqlanywhere-server/src/rpc/: mod.rs  proxy.rs  replica_proxy.rs  streaming_exec.rs
sqlanywhere-server/src/schema/: db.rs  migration.rs  mod.rs  scheduler.rs
sqlanywhere-server/src/test/: bottomless.rs
sqlanywhere-server/tests/auth/: mod.rs
sqlanywhere-server/tests/cluster/: mod.rs  replica_restart.rs  replication.rs  schema_dbs.rs
sqlanywhere-server/tests/common/: net.rs
sqlanywhere-server/tests/embedded_replica/: local.rs  mod.rs
sqlanywhere-server/tests/hrana/: batch.rs  mod.rs  transaction.rs
sqlanywhere-server/tests/namespaces/: dumps.rs  meta.rs  mod.rs  shared_schema.rs
sqlanywhere-server/tests/standalone/: admin.rs  attach.rs  auth.rs  mod.rs
sqlanywhere-shell/: Cargo.toml  README.md
sqlanywhere-shell/src/: main.rs
sqlanywhere-sqlite3/: .gitignore  Dockerfile-wasm-udf  LICENSE.md  Makefile.in  Makefile.msc  configure.ac  main.mk  sqlanywhere.pc.in
sqlanywhere-sqlite3/autoconf/: Makefile.am  Makefile.msc  configure.ac
sqlanywhere-sqlite3/autoconf/tea/: configure.ac
sqlanywhere-sqlite3/benchmark/: Makefile  README.md  workload.py
sqlanywhere-sqlite3/contrib/: bootstrap.fedora.sh
sqlanywhere-sqlite3/crates/wasmtime-bindings/: Cargo.toml
sqlanywhere-sqlite3/crates/wasmtime-bindings/src/: lib.rs
sqlanywhere-sqlite3/doc/: sqlanywhere_extensions.md
sqlanywhere-sqlite3/ext/crr/: Makefile
sqlanywhere-sqlite3/ext/icu/: README.txt
sqlanywhere-sqlite3/ext/jni/: GNUmakefile  jar-dist.make
sqlanywhere-sqlite3/ext/rtree/: README  viewrtree.tcl
sqlanywhere-sqlite3/ext/sqlanywhere-wasi/: Cargo.toml
sqlanywhere-sqlite3/ext/wasi/: vfs.c
sqlanywhere-sqlite3/src/: alter.c  attach.c  btree.h  build.c  func.c  insert.c  loadext.c  main.c  page_header.h  pager.c  pager.h  parse.y  pragma.c  shell.c.in  sqlite.h.in  sqliteInt.h  status.c  tclsqlite.h  test3.c  test_sqlanywhere_f16.c  test_walapi.c  vdbe.c  vdbeInt.h  vdbeapi.c  vdbeaux.c  vector.c  vectorIndex.c  vectorIndexInt.h  vectorInt.h  vectordiskann.c  vectorfloat16.c  vectorfloat1bit.c  vectorfloat32.c  vectorfloat64.c  vectorfloat8.c  vectorfloatb16.c  vectorvtab.c  vtab.c  wal.c  wal.h
sqlanywhere-sqlite3/test/: all.test  interruptstmt.test  interrupttest.c  sqlanywhere_alter.test  sqlanywhere_vector.test  sqlanywhere_vector_index.test
sqlanywhere-sqlite3/testdir/: sqlanywhere_vector_index_v2.db
sqlanywhere-sqlite3/tool/: buildtclext.tcl  generate-artifacts.sh  mkmsvcmin.tcl  mksqlite3h.tcl  pre-release.sh  vectoridx_graphviz.py
sqlanywhere-sys/: Cargo.toml
sqlanywhere-sys/src/: connection.rs  error.rs  lib.rs  statement.rs  types.rs
sqlanywhere-sys/src/wal/: ffi.rs  mod.rs  sqlite3_wal.rs
sqlanywhere/benches/: benchmark.rs
sqlanywhere/examples/: deserialization.rs  encryption_local.rs  encryption_remote.rs  encryption_sync.rs  example.rs  example_v2.rs  flutter.rs  local_rag.rs  local_sync.rs  offline_writes.rs  remote_sync.rs  replica.rs  transaction.rs
sqlanywhere/src/: auth.rs  connection.rs  database.rs  embed.rs  errors.rs  lib.rs  params.rs  parser.rs  rows.rs  sync.rs  transaction.rs  value.rs
sqlanywhere/tests/: embed.rs  encryption.rs  hybrid_search.rs  integration_tests.rs  replication.rs  vector.rs
tools/fuzz/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
(+152 files in other folders)
