[workspace]
resolver = "3"
members = [
  "bindings/c",
  "bindings/wasm",
  "bottomless",
  "bottomless-cli",
  "sqlanywhere",
  "sqlanywhere-ffi",
  "sqlanywhere-hrana",
  "sqlanywhere-replication",
  "sqlanywhere-server",
  "sqlanywhere-sys",
  "vendored/rusqlite",
  "vendored/sqlite3-parser",
  "xtask",
]

exclude = [
    "./sqlanywhere-sqlite3/ext/crr",
    "./sqlanywhere-sqlite3/ext/sqlanywhere-wasi",
    "sqlanywhere-shell",
    "tools/rebuild-log",
    "tools/fuzz",
]

[workspace.package]
version = "0.2.0"
authors = ["the SQL Anywhere authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/kwhorne/sql-anywhere"

[workspace.dependencies]
sqlanywhere-ffi = { path = "sqlanywhere-ffi", version = "0.2.0" }
sqlanywhere-sys = { path = "sqlanywhere-sys", version = "0.2.0", default-features = false }
sqlanywhere-hrana = { path = "sqlanywhere-hrana", version = "0.2.0" }
sqlanywhere_replication = { path = "sqlanywhere-replication", version = "0.2.0" }
rusqlite = { package = "sqlanywhere-rusqlite", path = "vendored/rusqlite", version = "0.2.0", default-features = false, features = [
    "sqlanywhere-experimental",
    "column_decltype",
    "load_extension",
    "modern_sqlite",
    "functions",
    "limits",
    "hooks",
] }
hyper = { version = "0.14" }
tower = { version = "0.4.13" }
zerocopy = { version = "0.7.32", features = ["derive", "alloc"] }

[profile.release]
codegen-units = 1
panic = "unwind"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

