[package]
name = "bottomless"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["sqlanywhere", "sqlite", "s3", "wal", "replication"]
repository = "https://github.com/kwhorne/sql-anywhere"
readme = "bottomless/README.md"
description = "Bottomless replication for SQL Anywhere"

[dependencies]
anyhow = "1.0.66"
async-compression = { version = "0.4.4", features = ["tokio", "gzip", "zstd"] }
aws-config = { version = "1" }
aws-sdk-s3 = { version = "1" }
bytes = "1"
sqlanywhere-sys = { path = "../sqlanywhere-sys" }
sqlanywhere_replication = { path = "../sqlanywhere-replication" }
tokio = { version = "1.22.2", features = ["rt-multi-thread", "net", "io-std", "io-util", "time", "macros", "sync", "fs"] }
tokio-util = "0.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
arc-swap = "1.6"
chrono = "0.4.23"
uuid = "1.4.1"
rand = "0.8.5"
futures-core = "0.3.29"
serde = { version = "1.0.196", features = ["derive"] }
metrics = "0.21.1"

[features]
default = []
sqlanywhere_linked_statically = []
encryption = ["sqlanywhere-sys/encryption", "sqlanywhere_replication/encryption"]

[lib]
crate-type = ["rlib", "staticlib"]

[package.metadata.dist]
dist = false
