[package]
name = "sqlanywhere-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native bindings to SqlAnywhere"
keywords = ["sqlanywhere", "sqlite", "ffi", "bindings", "database"]
categories = ["external-ffi-bindings"]

[dependencies]
bytes = "1.5.0"
sqlanywhere-ffi = { workspace = true }
once_cell = "1.18.0"
rusqlite = { workspace = true, features = ["trace"], optional = true }
tracing = "0.1.37"
zerocopy = { version = "0.7.28", features = ["derive"] }

[features]
default = ["api"]
api = ["wal"]
wal = []
rusqlite = ["dep:rusqlite"]
wasmtime-bindings = ["sqlanywhere-ffi/wasmtime-bindings"]
unix-excl-vfs = []
encryption = ["sqlanywhere-ffi/multiple-ciphers"]
sqlean-extension-uuid = ["sqlanywhere-ffi/sqlean-extension-uuid"]
sqlean-extension-crypto = ["sqlanywhere-ffi/sqlean-extension-crypto"]
sqlean-extension-fuzzy = ["sqlanywhere-ffi/sqlean-extension-fuzzy"]
sqlean-extension-math = ["sqlanywhere-ffi/sqlean-extension-math"]
sqlean-extension-stats = ["sqlanywhere-ffi/sqlean-extension-stats"]
sqlean-extension-text = ["sqlanywhere-ffi/sqlean-extension-text"]
sqlean-extension-regexp = ["sqlanywhere-ffi/sqlean-extension-regexp"]
sqlean-extensions = ["sqlanywhere-ffi/sqlean-extensions"]
