[package]
name = "sqlanywhere-wasm"
version = "0.2.0"
description = "WebAssembly bindings for SQL Anywhere"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
sqlanywhere = { path = "../../sqlanywhere", default-features = false, features = ["core"] }
wasm-bindgen = "0.2"
