[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "*"
sqlite3-parser = { package = "sqlanywhere-sqlite3-parser", path = "../../vendored/sqlite3-parser", version = "0.2.0", default-features = false, features = [ "YYNOERRORRECOVERY" ] }
fallible-iterator = "0.3.0"
