[package]
name = "sqlanywhere-wasmtime-bindings"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
description = "Wasmtime bindings for SqlAnywhere user-defined functions"
keywords = ["SqlAnywhere", "Wasmtime", "Wasm", "WebAssembly", "SQLite"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "9.0"
wasmtime-wasi = "9.0"

[lib]
name = "sqlanywhere_wasm"
crate-type = ["lib", "cdylib", "staticlib"]
doc = false
test = false
doctest = false

[profile.release]
opt-level = "s"
strip = true
debug = false
panic = "abort"
