[package]
name = "sqlanywhere-wasmtime-bindings"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Wasmtime bindings for SQL Anywhere user-defined functions"
keywords = ["sqlanywhere", "wasmtime", "wasm", "webassembly", "sqlite"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "9.0"
wasmtime-wasi = "9.0"

[lib]
name = "sqlanywhere_wasm"
crate-type = ["lib", "cdylib", "staticlib"]
doc = false
test = false
doctest = false
